; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_k8temp.c_k8temp_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_k8temp.c_k8temp_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.k8temp_data = type { i32, i64, i32 }
%struct.pci_dev = type { i32 }

@REG_TEMP = common dso_local global i32 0, align 4
@SEL_PLACE = common dso_local global i32 0, align 4
@SEL_CORE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32, i32, i32, i64*)* @k8temp_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @k8temp_read(%struct.device* %0, i32 %1, i32 %2, i32 %3, i64* %4) #0 {
  %6 = alloca %struct.device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64*, align 8
  %11 = alloca %struct.k8temp_data*, align 8
  %12 = alloca %struct.pci_dev*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i64* %4, i64** %10, align 8
  %17 = load %struct.device*, %struct.device** %6, align 8
  %18 = call %struct.k8temp_data* @dev_get_drvdata(%struct.device* %17)
  store %struct.k8temp_data* %18, %struct.k8temp_data** %11, align 8
  %19 = load %struct.device*, %struct.device** %6, align 8
  %20 = getelementptr inbounds %struct.device, %struct.device* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call %struct.pci_dev* @to_pci_dev(i32 %21)
  store %struct.pci_dev* %22, %struct.pci_dev** %12, align 8
  %23 = load i32, i32* %9, align 4
  %24 = ashr i32 %23, 1
  %25 = and i32 %24, 1
  store i32 %25, i32* %13, align 4
  %26 = load i32, i32* %9, align 4
  %27 = and i32 %26, 1
  store i32 %27, i32* %14, align 4
  %28 = load %struct.k8temp_data*, %struct.k8temp_data** %11, align 8
  %29 = getelementptr inbounds %struct.k8temp_data, %struct.k8temp_data* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load i32, i32* %13, align 4
  %32 = xor i32 %31, %30
  store i32 %32, i32* %13, align 4
  %33 = load %struct.k8temp_data*, %struct.k8temp_data** %11, align 8
  %34 = getelementptr inbounds %struct.k8temp_data, %struct.k8temp_data* %33, i32 0, i32 2
  %35 = call i32 @mutex_lock(i32* %34)
  %36 = load %struct.pci_dev*, %struct.pci_dev** %12, align 8
  %37 = load i32, i32* @REG_TEMP, align 4
  %38 = call i32 @pci_read_config_byte(%struct.pci_dev* %36, i32 %37, i32* %16)
  %39 = load i32, i32* @SEL_PLACE, align 4
  %40 = load i32, i32* @SEL_CORE, align 4
  %41 = or i32 %39, %40
  %42 = xor i32 %41, -1
  %43 = load i32, i32* %16, align 4
  %44 = and i32 %43, %42
  store i32 %44, i32* %16, align 4
  %45 = load i32, i32* %13, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %51

47:                                               ; preds = %5
  %48 = load i32, i32* @SEL_CORE, align 4
  %49 = load i32, i32* %16, align 4
  %50 = or i32 %49, %48
  store i32 %50, i32* %16, align 4
  br label %51

51:                                               ; preds = %47, %5
  %52 = load i32, i32* %14, align 4
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %58

54:                                               ; preds = %51
  %55 = load i32, i32* @SEL_PLACE, align 4
  %56 = load i32, i32* %16, align 4
  %57 = or i32 %56, %55
  store i32 %57, i32* %16, align 4
  br label %58

58:                                               ; preds = %54, %51
  %59 = load %struct.pci_dev*, %struct.pci_dev** %12, align 8
  %60 = load i32, i32* @REG_TEMP, align 4
  %61 = load i32, i32* %16, align 4
  %62 = call i32 @pci_write_config_byte(%struct.pci_dev* %59, i32 %60, i32 %61)
  %63 = load %struct.pci_dev*, %struct.pci_dev** %12, align 8
  %64 = load i32, i32* @REG_TEMP, align 4
  %65 = call i32 @pci_read_config_dword(%struct.pci_dev* %63, i32 %64, i32* %15)
  %66 = load %struct.k8temp_data*, %struct.k8temp_data** %11, align 8
  %67 = getelementptr inbounds %struct.k8temp_data, %struct.k8temp_data* %66, i32 0, i32 2
  %68 = call i32 @mutex_unlock(i32* %67)
  %69 = load i32, i32* %15, align 4
  %70 = call i64 @TEMP_FROM_REG(i32 %69)
  %71 = load %struct.k8temp_data*, %struct.k8temp_data** %11, align 8
  %72 = getelementptr inbounds %struct.k8temp_data, %struct.k8temp_data* %71, i32 0, i32 1
  %73 = load i64, i64* %72, align 8
  %74 = add nsw i64 %70, %73
  %75 = load i64*, i64** %10, align 8
  store i64 %74, i64* %75, align 8
  ret i32 0
}

declare dso_local %struct.k8temp_data* @dev_get_drvdata(%struct.device*) #1

declare dso_local %struct.pci_dev* @to_pci_dev(i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @pci_read_config_byte(%struct.pci_dev*, i32, i32*) #1

declare dso_local i32 @pci_write_config_byte(%struct.pci_dev*, i32, i32) #1

declare dso_local i32 @pci_read_config_dword(%struct.pci_dev*, i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i64 @TEMP_FROM_REG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
